# oth-pg_mi_WS201617

./: .gitignore  CMakeLists.txt  README.md  Solved.txt
pg_mi_01_einfuehrung/: README.md  hello_world.c  rechner.c  rechner.py
pg_mi_02_datentypenundkontrollstrukturen/: Makefile  README.md  constants.c  fall_string.c  fallunterscheidung.c  fallunterscheidung1.c  getmax.c  rechner.c  rechner2.c  schleife_dowhile.c  schleife_for.c  schleife_for2.c  schleife_while.c
pg_mi_03_datenstrukturen/: adressen.c  adressen2.S  adressen2.c  mallocandfree.c  realloc.c  realloc2.c  strutcs.c  strutcs2.c  tictac.c  zeichenketten1.c  zeichenketten2.c  zeichenketten3.c
pg_mi_04_modularisierung/: func1.c  func2.c  queue_sample1.c  rekursion.c  tictac-function1.c  tictac-function2.c  tictac-nofunctions.c
pg_mi_05_benutzeroberflaechen/: README.md
pg_mi_06_dateien/: README.md  append.c  datei.txt  (+11 more)
pg_mi_exercises/: CMakeLists.txt
pg_mi_exercises/paper_01/task_01/: CMakeLists.txt  main.c
pg_mi_exercises/paper_01/task_02/: CMakeLists.txt  main.c
pg_mi_exercises/paper_01/task_03/: CMakeLists.txt  main.c
pg_mi_exercises/paper_01/task_04/: CMakeLists.txt  main.c
pg_mi_exercises/paper_01/task_05/: CMakeLists.txt  main.c
pg_mi_exercises/paper_01/task_06/: CMakeLists.txt  main.c
pg_mi_exercises/paper_01/task_07/: CMakeLists.txt  main.c
pg_mi_exercises/paper_02/task_01/: CMakeLists.txt  main.c
pg_mi_exercises/paper_02/task_02/: CMakeLists.txt  main.c
pg_mi_exercises/paper_02/task_03/: CMakeLists.txt  main.c
pg_mi_exercises/paper_02/task_04/: CMakeLists.txt  main.c
pg_mi_exercises/paper_02/task_05/: CMakeLists.txt  main.c
pg_mi_exercises/paper_02/task_06/: CMakeLists.txt  main.c
pg_mi_exercises/paper_02/task_07/: CMakeLists.txt  main.c
pg_mi_exercises/paper_02/task_08/: CMakeLists.txt  main.c
pg_mi_exercises/paper_03/task_01/: CMakeLists.txt  main.c
pg_mi_exercises/paper_03/task_02/: CMakeLists.txt  main.c
pg_mi_exercises/paper_03/task_03/: CMakeLists.txt  main.c
pg_mi_exercises/paper_03/task_04/: CMakeLists.txt  main.c
pg_mi_exercises/paper_03/task_05/: CMakeLists.txt  main.c
pg_mi_exercises/paper_03/task_05/libs/: functions.c  functions.h  functions_test.c
pg_mi_exercises/paper_03/task_06/: CMakeLists.txt  main.c
pg_mi_exercises/paper_03/task_06/libs/: map.c  map.h
pg_mi_exercises/paper_03/task_06/v1/: CMakeLists.txt
pg_mi_exercises/paper_03/task_06/v2/: CMakeLists.txt  main.c
pg_mi_exercises/paper_03/task_06/v2/libs/: map.c  map.h  map_test.c
pg_mi_exercises/paper_04/task_01/: CMakeLists.txt  main.c
pg_mi_exercises/paper_04/task_02/: CMakeLists.txt  main.c
pg_mi_exercises/paper_04/task_04/: CMakeLists.txt  main.c
pg_mi_exercises/paper_05/task_01/: CMakeLists.txt  main.c
pg_mi_exercises/paper_05/task_02/: CMakeLists.txt  main.c
pg_mi_exercises/paper_05/task_03/: CMakeLists.txt  main.c
pg_mi_exercises/paper_05/task_04/: CMakeLists.txt  main.c  personen.csv
pg_mi_exercises/strings/strcat/: CMakeLists.txt  main.c
pg_mi_exercises/strings/strcmp/: CMakeLists.txt  main.c
pg_mi_exercises/strings/strlen/: CMakeLists.txt  main.c
pg_mi_exercises/strings/strncmp/: CMakeLists.txt  main.c
pg_mi_exercises/strings/strnlen/: CMakeLists.txt  main.c
pg_mi_praktomat/: CMakeLists.txt  Solved.txt
pg_mi_praktomat/task_00_buchstaben-zaehlen/: CMakeLists.txt  charcounter.c
pg_mi_praktomat/task_00_division-durch-2/: CMakeLists.txt  division2.c  task_00_division-durch-2.c
pg_mi_praktomat/task_01_ermittle-das-maximum/: CMakeLists.txt  getmax.c
pg_mi_praktomat/task_02_summer-einer-liste-von-zahlen-berechnen/: CMakeLists.txt  calculatesum.c
pg_mi_praktomat/task_03_mittelwert-berechnen/: CMakeLists.txt  calculateavg.c
pg_mi_praktomat/task_04_potenzen/: CMakeLists.txt  getpower.c  task_04_potenzen.c
pg_mi_praktomat/task_05_wurzel-ziehen/: CMakeLists.txt  getsquareroot.c
pg_mi_praktomat/task_06_zeichen-ersetzen/: CMakeLists.txt  ersetze.c
pg_mi_praktomat/task_07_zeichenketten-ersetzen/: CMakeLists.txt  str_replace.c
pg_mi_praktomat/task_08_sortieren-einer-liste-von-zahlen/: CMakeLists.txt  sortieren.c
pg_mi_praktomat/task_09_volumenberechnung-eines-wuerfels/: CMakeLists.txt  main.c
pg_mi_praktomat/task_10_zahlworte/: CMakeLists.txt  solution.c
pg_mi_praktomat/task_11_stringsuche/: CMakeLists.txt  main.c
(+68 files in other folders)
